<resources>
    <string name="app_name">AnalysticCalculator</string>
    <string name="z_value">Z 값</string>
    <string name="t_value">t 값</string>
    <string name="chi_value">Chi 값</string>
    <string name="f_value">F 값</string>
    <string name="calc_title">일반 통계량 계산</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alpha_text">alpha</string>
    <string name="test_sort">검정 종류</string>
    <string name="left_right_all">양측</string>
    <string name="left_or_right">단측</string>
    <string name="test_t_value">t값 확인하기</string>
    <string name="fill_the_alpha">alpha값을 입력하세요</string>
    <string name="fill_df">범위 : 1 ~ 100, 120</string>
    <string name="t_hint">양측 가능 : 0.1 / 0.05 / 0.01 / 0.005 / 0.001\n단측 가능 : 양측 / 0.4 / 0.25 / 0.025 / 0.0025 / 0.0005</string>
    <string name="reset">초기화</string>
    <string name="z_hint">z값의 범위 : 0.0 ~ 3.99</string>
    <string name="f_hint">alpha값 : 0.1 / 0.05 / 0.005 / 0.01 / 0.025</string>
    <string name="z_test_hint">양측 검정: α/2에 해당하는 z값 / 단측 검정: α에 해당하는 z값</string>
    <string name="t_test_hint">양측 검정: α/2에 해당하는 t값 / 단측 검정: α에 해당하는 t값</string>
    <string name="test_z_value">z값 확인하기</string>
    <string name="test_chi_value">χ값 확인하기</string>
    <string name="test_f_value">F값 확인하기</string>
    <string name="df_ko">자유도</string>
    <string name="df_ko_1">자유도1</string>
    <string name="df_ko_2">자유도2</string>
    <string name="chi_hint">0.995 / 0.99 / 0.975 / 0.95 / 0.9\n0.1 / 0.05 / 0.025 / 0.01 / 0.005</string>
    <string name="z_value_ko">z값</string>
    <string name="input_z_value">z값을 입력하세요</string>
    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_ac">AC</string>
    <string name="text_root">√</string>
    <string name="text_power">^</string>
    <string name="text_e">e</string>
    <string name="text_ln">ln</string>
    <string name="text_bracket_open">(</string>
    <string name="text_bracket_close">)</string>
    <string name="text_mod">%</string>
    <string name="text_division">÷</string>
    <string name="text_multi">×</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="text_dot">.</string>
    <string name="text_back">⬅</string>
    <string name="text_equal">=</string>
</resources>