<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/zMainWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ZFragment"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    android:paddingVertical="20dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/zAlphaFullWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zAlphaWrapper"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@id/zAlphaHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/zAlphaTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/alpha_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/zAlphaInput"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/zAlphaInput"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:hint="@string/fill_the_alpha"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:labelFor="@id/zAlphaTitle"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/zAlphaTitle"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/zAlphaHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/z_hint"
            android:textAlignment="center"
            android:textColor="@color/hint_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zAlphaWrapper" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/zTestFullWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zAlphaFullWrapper">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zTestWrapper"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/zTestTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test_sort"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/zTestGroup"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <RadioGroup
                android:id="@+id/zTestGroup"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/zTestTitle"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/z_test_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/left_right_all"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/z_test_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left_or_right"
                    android:textColor="@color/white" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/z_testHint"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zTestWrapper"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAlignment="center"
            android:text="@string/z_test_hint"
            android:textColor="@color/hint_color"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/zBtnWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zTestFullWrapper">

        <Button
            android:id="@+id/zSubmitBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/visibility_none"
            android:text="@string/test_z_value"
            android:textAllCaps="false"
            android:textColor="@color/btn_color_coral"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/btn_color_coral"
            app:strokeWidth="1dp"
            tools:visibility="visible" />

        <Button
            android:id="@+id/zResetBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/visibility_none"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/btn_color_coral"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/btn_color_coral"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zBtnWrapper">

        <TextView
            android:id="@+id/zExplainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="alpha값 0.01에서 단측 검정일 때의 z 값" />

        <TextView
            android:id="@+id/zResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zExplainText"
            tools:text="0.94" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>