<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:paddingVertical="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tBtnWrapper">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/visibility_none"
                android:insetTop="3dp"
                android:insetBottom="3dp"
                android:text="@string/z_value"
                android:textAllCaps="false"
                android:textColor="@color/btn_color_coral"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/btn_color_coral"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/tBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:insetTop="3dp"
                android:insetBottom="3dp"
                android:text="@string/t_value"
                android:textAllCaps="false"
                android:backgroundTint="@color/visibility_none"
                android:textColor="@color/btn_color_coral"
                app:strokeColor="@color/btn_color_coral"
                app:strokeWidth="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chiBtn"
                app:layout_constraintStart_toEndOf="@id/zBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/chiBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:insetTop="3dp"
                android:backgroundTint="@color/visibility_none"
                android:textColor="@color/btn_color_coral"
                app:strokeColor="@color/btn_color_coral"
                app:strokeWidth="1dp"
                android:insetBottom="3dp"
                android:text="@string/chi_value"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fBtn"
                app:layout_constraintStart_toEndOf="@id/tBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/fBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:insetTop="3dp"
                android:insetBottom="3dp"
                android:text="@string/f_value"
                android:backgroundTint="@color/visibility_none"
                android:textColor="@color/btn_color_coral"
                app:strokeColor="@color/btn_color_coral"
                app:strokeWidth="1dp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chiBtn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/commonBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:insetTop="3dp"
            android:insetBottom="3dp"
            android:backgroundTint="@color/visibility_none"
            android:textColor="@color/btn_color_coral"
            app:strokeColor="@color/btn_color_coral"
            app:strokeWidth="1dp"
            android:textAllCaps="false"
            android:text="@string/calc_title"/>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#BFFFA4A4"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tBtnWrapper" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>